--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
@@ -81,14 +80,22 @@
       .animate-fade-in { animation: fadeIn 0.6s cubic-bezier(0.2, 1, 0.3, 1) forwards; }
 
       /* تحسين تأثير النقر ليصبح أكثر انسيابية وسلاسة */
-      .bg-blue-600.text-white.rounded-\[2rem\].font-black.text-xl.shadow-3xl.shadow-blue-500\/30.transition-all.transform.hover\:scale-\[1\.02\].active\:scale-95.flex.items-center.justify-center.gap-4,
       .active\:scale-95 {
         transition: transform 0.4s cubic-bezier(0.22, 1, 0.36, 1), box-shadow 0.4s ease !important;
       }
       
       .active\:scale-95:active {
         transform: scale(0.95) !important;
-        transition: transform 0.1s cubic-bezier(0.1, 0.7, 0.1, 1) !important;
+        transition: transform 0.08s cubic-bezier(0, 0, 0.2, 1) !important;
+      }
+
+      /* CSS Selector specific button improvement as requested */
+      .bg-blue-600.text-white.rounded-\[2rem\].font-black.text-xl.shadow-3xl.shadow-blue-500\/30 {
+        transition: all 0.4s cubic-bezier(0.22, 1, 0.36, 1) !important;
+      }
+
+      .bg-blue-600.text-white.rounded-\[2rem\].font-black.text-xl.shadow-3xl.shadow-blue-500\/30:hover {
+        transform: scale(1.02) !important;
       }
 
       ::-webkit-scrollbar { width: 6px; }
