--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       .animate-fade-up { animation: fadeInUp 0.8s cubic-bezier(0.2, 1, 0.3, 1) forwards; }
       .animate-fade-in { animation: fadeIn 0.6s cubic-bezier(0.2, 1, 0.3, 1) forwards; }
 
-      /* تحسين تأثير النقر ليصبح أكثر انسيابية وسلاسة */
+      /* Improved interaction for elite buttons */
       .active\:scale-95 {
         transition: transform 0.4s cubic-bezier(0.22, 1, 0.36, 1), box-shadow 0.4s ease !important;
       }
@@ -89,13 +89,35 @@
         transition: transform 0.08s cubic-bezier(0, 0, 0.2, 1) !important;
       }
 
-      /* CSS Selector specific button improvement as requested */
+      /* Base selector for primary elite buttons */
       .bg-blue-600.text-white.rounded-\[2rem\].font-black.text-xl.shadow-3xl.shadow-blue-500\/30 {
-        transition: all 0.4s cubic-bezier(0.22, 1, 0.36, 1) !important;
+        transition: all 0.5s cubic-bezier(0.2, 1, 0.3, 1) !important;
+        position: relative;
+        z-index: 1;
+        transform: scale(1);
       }
 
+      /* Subtly intensified scale effect on hover */
       .bg-blue-600.text-white.rounded-\[2rem\].font-black.text-xl.shadow-3xl.shadow-blue-500\/30:hover {
-        transform: scale(1.02) !important;
+        transform: scale(1.035) translateY(-2px) !important;
+        box-shadow: 0 30px 60px -12px rgba(37, 99, 235, 0.45) !important;
+        filter: brightness(1.08);
+      }
+
+      .bg-blue-600.text-white.rounded-\[2rem\].font-black.text-xl.shadow-3xl.shadow-blue-500\/30:active {
+        transform: scale(0.96) !important;
+        transition: transform 0.1s ease !important;
+      }
+
+      /* Subtle disabled visual change */
+      .bg-blue-600.text-white.rounded-\[2rem\].font-black.text-xl.shadow-3xl.shadow-blue-500\/30:disabled,
+      .bg-red-600.text-white.rounded-\[2rem\].font-black.text-xl.shadow-3xl.shadow-red-500\/20:disabled {
+        cursor: not-allowed !important;
+        opacity: 0.4 !important;
+        transform: scale(1) !important;
+        box-shadow: none !important;
+        filter: grayscale(0.5) !important;
+        pointer-events: none !important;
       }
 
       ::-webkit-scrollbar { width: 6px; }
