--- a/index.html
+++ b/index.html
@@ -79,14 +79,16 @@
       .animate-fade-up { animation: fadeInUp 0.8s cubic-bezier(0.2, 1, 0.3, 1) forwards; }
       .animate-fade-in { animation: fadeIn 0.6s cubic-bezier(0.2, 1, 0.3, 1) forwards; }
 
-      /* Improved interaction for elite buttons */
+      /* Super Smooth Active State for Elite Buttons */
       .active\:scale-95 {
-        transition: transform 0.4s cubic-bezier(0.22, 1, 0.36, 1), box-shadow 0.4s ease !important;
+        transition: transform 0.5s cubic-bezier(0.34, 1.56, 0.64, 1), box-shadow 0.4s ease-out !important;
+        will-change: transform;
       }
       
       .active\:scale-95:active {
-        transform: scale(0.95) !important;
-        transition: transform 0.08s cubic-bezier(0, 0, 0.2, 1) !important;
+        transform: scale(0.94) !important;
+        box-shadow: 0 5px 10px -2px rgba(37, 99, 235, 0.2) !important;
+        transition: transform 0.1s cubic-bezier(0.12, 0, 0.39, 0) !important;
       }
 
       /* Base selector for primary elite buttons */
@@ -100,20 +102,22 @@
       /* Subtle icon-zoom effect on button hover */
       .bg-blue-600.text-white.rounded-\[2rem\].font-black.text-xl.shadow-3xl.shadow-blue-500\/30:hover svg,
       .bg-blue-600.text-white.rounded-\[2rem\].font-black.text-xl.shadow-3xl.shadow-blue-500\/30:hover span[class*="text-"] {
-        transform: scale(1.2) rotate(5deg);
+        transform: scale(1.15) rotate(3deg);
         transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
       }
 
       /* Subtly intensified scale effect on hover */
       .bg-blue-600.text-white.rounded-\[2rem\].font-black.text-xl.shadow-3xl.shadow-blue-500\/30:hover {
-        transform: scale(1.035) translateY(-2px) !important;
-        box-shadow: 0 30px 60px -12px rgba(37, 99, 235, 0.45) !important;
-        filter: brightness(1.08);
+        transform: scale(1.025) translateY(-2px) !important;
+        box-shadow: 0 25px 50px -12px rgba(37, 99, 235, 0.4) !important;
+        filter: brightness(1.05);
       }
 
+      /* Resetting active behavior to be smoother specifically for these buttons */
       .bg-blue-600.text-white.rounded-\[2rem\].font-black.text-xl.shadow-3xl.shadow-blue-500\/30:active {
-        transform: scale(0.96) !important;
-        transition: transform 0.1s ease !important;
+        transform: scale(0.95) translateY(0) !important;
+        transition: transform 0.1s ease-out !important;
+        box-shadow: 0 10px 20px -5px rgba(37, 99, 235, 0.2) !important;
       }
 
       /* Subtle disabled visual change */
